name:                hscript
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hscript#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.24
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     AST
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hscript
    hs-source-dirs:      src
    main-is:             Main.hs
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , hscript
    other-modules:       AST

test-suite hscript-test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             Spec.hs
    other-modules:       ASTSpec
    build-depends:       base
                       , hscript
                       -- , containers
                       , hspec
                       , hspec-core
                       , QuickCheck
                       -- , silently
                       -- , ieee754
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010
